# Inbox-AI

./: .dockerignore  .gitignore  Dockerfile  README.md  arch.md  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: main.py
app/api/: schemas.py
app/common/: environment.py  gmail.py  llm.py  logging.py  poller.py  polling.py  prompts.py  settings.py  storage.py
app/core/classification/: __init__.py  engine.py
app/core/knowledge/: catalog.py
app/core/workflow/: __init__.py  audit.py  branch_nodes.py  classifier_nodes.py  graph.py  helpers.py  models.py  responses.py  review.py
app/dashboard/: main.py
app/dashboard/ui/: case_views.py  components.py  styles.py  tabs.py
deploy/nginx/: inboxai.devcrew.dev.conf
tests/: conftest.py  test_classification_matrix.py  test_gmail_api.py  test_knowledge_base.py  test_llm.py  test_ui_intake.py  test_workflow.py
